# 1d-control-in-class-p1-berea-team-2

./: CMakeLists.txt  README.md  username_CSC386_Graph_Search.ipynb
include/robot_control/common/: drive.h  lidar.h  utils.h
omnibot_msgs/: CMakeLists.txt
omnibot_msgs/lcmtypes/: omni_motor_command_t.lcm
src/: 1D_control.cpp  2D_control_nearest.cpp
src/common/: drive.cpp  lidar.cpp  utils.cpp
